postgresql-9.0 (9.0~beta1-0.1) UNRELEASED; urgency=low

  [ Peter Eisentraut ]
  * Create 9.0 package based on 8.4 packaging trunk. Don't build versionless
    metapackages for 9.0 yet.
    - Adjusted 11-pg_regress-socketpath.patch
    - Obsoletes 03-sh-architecture.patch
  * Dropped obsolete documentation build.
  * debian/rules: Use make world/install-world targets, obsoletes
    01-build-contrib.patch.
  * debian/watch: Adjusted for alpha releases.

  [ Martin Pitt ]
  * Update to upstream beta 1 release.
  * 07-relax-sslkey-permscheck.patch: Add parentheses around || .. &&
    construct to avoid a compiler warning (which turns into an error when
    building with -Werror). Also add a DEP3 compatible header.
  * 14-pg_config-paths.patch: Drop now unused "ret" variable (fix FTBFS with
    -Werror). Add a DEP3 compatible header.
  * debian/control: Bump p-common dependency to >= 107~ to ensure support for
    9.0.
  * debian/disable-root-check.patch: Refresh to apply cleanly.
  * Convert source package to "3.0 (quilt)" format.
  * Refresh patches to apply without fuzz.
  * debian/control: Bump Standards-Version to 3.8.4 (no changes necessary).

 -- Peter Eisentraut <petere@debian.org>  Sun, 28 Mar 2010 00:23:13 +0200