@@ -1,3 +1,7 @@
+Author: Martin Pitt <mpitt@debian.org>
+Description: Use /usr/bin/pager alternative instead of hardcoding "more".
+Forwarded: No, Debian specific
+
 Index: postgresql-9.0-9.0~beta1/src/bin/psql/print.h
 ===================================================================
 --- postgresql-9.0-9.0~beta1.orig/src/bin/psql/print.h	2010-03-01 21:55:45.000000000 +0100
