@@ -1,3 +1,7 @@
+Author: Martin Pitt <mpitt@debian.org>
+Description: Using /tmp for sockets allows everyone to spoof a PostgreSQL server. Thus use /var/run/postgresql/ for "system" clusters which run as 'postgres' (user clusters will still use /tmp). Since system cluster are by far the common case, set it as default.
+Forwarded: No, Debian specific configuration with postgresql-common
+
 Index: postgresql-9.0-9.0~beta1/src/include/pg_config_manual.h
 ===================================================================
 --- postgresql-9.0-9.0~beta1.orig/src/include/pg_config_manual.h	2010-01-07 05:53:35.000000000 +0100
