@@ -1,3 +1,7 @@
+Author: Martin Pitt <mpitt@debian.org>
+Description: Update tutorial README for required build dependencies.
+Forwarded: No, Debian specific
+
 Index: postgresql-9.0-9.0~beta1/src/tutorial/README
 ===================================================================
 --- postgresql-9.0-9.0~beta1.orig/src/tutorial/README	2008-03-21 14:23:29.000000000 +0100
