@@ -1,3 +1,7 @@
+Author: Martin Pitt <mpitt@debian.org>
+Description: As a consequence of 06-libpq-defaultsocketdir.patch we now need to explicitly specify the pg_regress socket dir as /tmp, since it runs the server as the invoking user.
+Forwarded: No, Debian specific
+
 Index: postgresql-9.0-9.0~beta1/src/test/regress/pg_regress.c
 ===================================================================
 --- postgresql-9.0-9.0~beta1.orig/src/test/regress/pg_regress.c	2010-02-26 03:01:39.000000000 +0100
