@@ -23,5 +23,6 @@ postgresql-9.0 (9.0~beta1-0.1) UNRELEASED; urgency=low
   * Convert source package to "3.0 (quilt)" format.
   * Refresh patches to apply without fuzz.
   * debian/control: Bump Standards-Version to 3.8.4 (no changes necessary).
+  * debian/patches/: Add DEP-3 compatible patch descriptions.
 
  -- Peter Eisentraut <petere@debian.org>  Sun, 28 Mar 2010 00:23:13 +0200
